fix: aligned all footer to the center

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -88,6 +88,7 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
+    letter-spacing: 1.5px;
     gap: 50px;
   }
   .footer-list li{
